# NoShitProxy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  start-proxy.sh
noshitproxy/: models.py
noshitproxy/backend/: app.py  repeater.py  store.py
noshitproxy/frontend/: app.js  index.html  styles.css
noshitproxy/proxy/: bridge_addon.py  serialize.py
